# sponge

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile  LICENCE  README.md  vcpkg.json
.github/agents/: agent-governance-reviewer.agent.md  expert-cpp-software-engineer.agent.md
app/redis/: CMakeLists.txt  aof.cpp  aof.test.cpp  application.cpp  application.test.cpp  application_context.cpp  application_context.test.cpp  command.cpp  command.test.cpp  command_context.cpp  command_context.h  commands.cpp  dash_table.cpp  dash_table.test.cpp  db_shard.cpp  db_shard.h  db_shard.test.cpp  list_pack.cpp  list_pack.test.cpp  main.cpp  protocol.cpp  protocol.test.cpp  reply.h  reply.test.cpp  rstring.cpp  rstring.h  rstring.test.cpp  sds.cpp  sds.h  sds.test.cpp  server.cpp  server.h  server.test.cpp  session.cpp  session.h  skip_list.cpp  skip_list.test.cpp  sorted_set.cpp  sorted_set.h  sorted_set.test.cpp  (+2 more)
benchmark/: CMakeLists.txt  README.md  arena_and_size_benchmark.cpp  cpp_string_verdict.cpp  pmr_string_comparison.cpp  sds_template_vs_polymorphic.cpp  sds_vs_string_benchmark.cpp  sorted_set_hybrid_vs_flat_map.cpp
cmake/: AddModule.cmake
docs/: README.md  git-commit-convention.md  test-case-convention.md
docs/http/: README.md
docs/leveldb/: README.md
docs/redis/: BENCHMARK.md  README.md  REDIS_COMMANDS.md
include/sponge/: coding.h  fixed_string.h  format.h  hash.h  io_contexts.h  log.h  lru_cache.h  named_type.h  path.h  random.h  range.h  tag.h  tracking_resource.h  utility.h  writable_file.h
include/sponge/http/: exceptions.h  invoke.h  method.h  middleware.h  path_pattern.h  request.h  response.h  router.h  server.h  session.h  status.h  templates.h
include/sponge/leveldb/: comparator.h  database.h  exceptions.h  formats.h  internal_key.h  iterator.h  memtable.h  options.h  skip_list.h  status.h  write_batch.h
include/sponge/redis/: aof.h  application.h  application_context.h  dash_table.h  db_shard.h  list_pack.h  server.h  skip_list.h  sorted_set.h  string.h  ttl_manager.h
include/sponge/sync/: lru_cache.h
scripts/: format_includes_only.py  redis_benchmark_matrix.sh  run_live_benchmark_docker.sh  scaffold_cpp.py
src/: CMakeLists.txt  http_server.cpp  redis_server.cpp
src/common/: coding.cpp  coding.test.cpp  fixed_string.cpp  fixed_string.test.cpp  format.cpp  format.test.cpp  hash.cpp  hash.test.cpp  io_contexts.cpp  io_contexts.test.cpp  log.cpp  log.test.cpp  lru_cache.cpp  lru_cache.test.cpp  named_type.cpp  named_type.test.cpp  path.cpp  path.test.cpp  random.cpp  random.test.cpp  range.cpp  range.test.cpp  tracking_resource.cpp  tracking_resource.test.cpp  utility.cpp  utility.test.cpp  writable_file.cpp  writable_file.test.cpp
src/http/: exceptions.cpp  exceptions.test.cpp  invoke.cpp  invoke.test.cpp  method.cpp  method.test.cpp  middleware.cpp  middleware.test.cpp  path_pattern.cpp  path_pattern.test.cpp  request.cpp  request.test.cpp  response.cpp  response.test.cpp  router.cpp  router.test.cpp  server.cpp  server.test.cpp  session.cpp  session.test.cpp  status.cpp  status.test.cpp  templates.cpp  templates.test.cpp
src/leveldb/: block.cpp  block.h  block.test.cpp  coding.cpp  coding.h  coding.test.cpp  comparator.cpp  comparator.test.cpp  crc.cpp  crc.h  crc.test.cpp  database.cpp  database.test.cpp  exceptions.cpp  exceptions.test.cpp  formats.cpp  formats.test.cpp  internal_key.cpp  internal_key.h  internal_key.test.cpp  iterator.cpp  iterator.test.cpp  log.cpp  log.h  log.test.cpp  memtable.cpp  memtable.test.cpp  memtable_inserter.cpp  memtable_inserter.h  memtable_inserter.test.cpp  options.cpp  options.test.cpp  skip_list.cpp  skip_list.h  skip_list.test.cpp  status.cpp  status.test.cpp  wal.cpp  wal.h  wal.test.cpp  (+5 more)
src/redis/: aof.cpp  aof.test.cpp  application.cpp  application.test.cpp  application_context.cpp  application_context.h  application_context.test.cpp  command.cpp  command.h  command.test.cpp  command_context.h  command_context.test.cpp  commands.cpp  commands.h  commands.test.cpp  dash_table.cpp  dash_table.test.cpp  db_shard.cpp  db_shard.test.cpp  list_pack.cpp  list_pack.test.cpp  protocol.cpp  protocol.h  protocol.test.cpp  reply.cpp  reply.h  reply.test.cpp  sds.cpp  sds.h  sds.test.cpp  server.cpp  server.test.cpp  session.cpp  session.h  session.test.cpp  skip_list.cpp  skip_list.test.cpp  sorted_set.cpp  sorted_set.test.cpp  string.cpp  (+3 more)
src/sync/: lru_cache.cpp  lru_cache.test.cpp
