cmake_minimum_required(VERSION 3.25)

add_executable(sds_vs_string_benchmark sds_vs_string_benchmark.cpp)
target_compile_features(sds_vs_string_benchmark PRIVATE cxx_std_23)
target_compile_options(sds_vs_string_benchmark PRIVATE -O3 -DNDEBUG)
target_link_libraries(sds_vs_string_benchmark PRIVATE sponge::redis)

add_executable(sds_template_vs_polymorphic sds_template_vs_polymorphic.cpp)
target_compile_features(sds_template_vs_polymorphic PRIVATE cxx_std_23)
target_compile_options(sds_template_vs_polymorphic PRIVATE -O3 -DNDEBUG)
target_include_directories(sds_template_vs_polymorphic PRIVATE ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(sds_template_vs_polymorphic PRIVATE sponge::redis)

add_executable(cpp_string_verdict cpp_string_verdict.cpp)
target_compile_features(cpp_string_verdict PRIVATE cxx_std_23)
target_compile_options(cpp_string_verdict PRIVATE -O3 -DNDEBUG)
target_link_libraries(cpp_string_verdict PRIVATE sponge::redis)

add_executable(pmr_string_comparison pmr_string_comparison.cpp)
target_compile_features(pmr_string_comparison PRIVATE cxx_std_23)
target_compile_options(pmr_string_comparison PRIVATE -O3 -DNDEBUG)
target_link_libraries(pmr_string_comparison PRIVATE sponge::redis)

add_executable(arena_and_size_benchmark arena_and_size_benchmark.cpp)
target_compile_features(arena_and_size_benchmark PRIVATE cxx_std_23)
target_compile_options(arena_and_size_benchmark PRIVATE -O3 -DNDEBUG)
target_link_libraries(arena_and_size_benchmark PRIVATE sponge::redis)
